--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/MainMenu.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/MainMenu.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" style="-fx-background-color: #2F2F30;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox layoutX="378.0" layoutY="350.0" spacing="40.0">
@@ -18,7 +17,7 @@
                   <Font size="36.0" />
                </font>
                <graphic>
-                  <FontAwesomeIconView glyphName="USER" />
+                  <FontAwesomeIconView fx:id="user" glyphName="USER" />
                </graphic>
             </Button>
             <Button mnemonicParsing="false" prefHeight="201.0" prefWidth="223.0" style="-fx-background-color: #F1E0A6;" textFill="#f2f1f0">
