--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/LoginV2.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/LoginV2.fxml
@@ -1,31 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.Avatar?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Bloom?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="359.0" prefWidth="616.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.JavaUI.sample.Controller">
+<AnchorPane prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.JavaUI.sample.Controller">
    <children>
-      <Polygon fill="#4ec8f50d" layoutX="-169.0" layoutY="368.0" points="169.00001525878906, 43.0, 169.00001525878906, -368.0, 488.9999694824219, 42.999969482421875" stroke="TRANSPARENT" strokeType="INSIDE">
+      <Polygon fill="#4ec8f50d" layoutX="-169.0" layoutY="368.0" points="169.00001525878906, 541.0, 169.00001525878906, -368.0, 744.5999755859375, 540.7999877929688" stroke="TRANSPARENT" strokeType="INSIDE">
          <effect>
             <Bloom />
          </effect>
       </Polygon>
-      <Polygon fill="#4ec8f50d" layoutX="-208.0" layoutY="368.0" points="208.0, 43.60003662109375, 208.0, -368.0, 453.5999755859375, 43.60003662109375" stroke="TRANSPARENT" strokeType="INSIDE" />
-      <Polygon fill="#4ec8f50d" layoutX="-216.0" layoutY="368.0" points="213.59999084472656, 43.0, 213.59999084472656, -369.1999816894531, 401.5999755859375, 43.0" stroke="TRANSPARENT" strokeType="INSIDE" />
-      <Polygon fill="#4ec8f50d" layoutX="-164.0" layoutY="368.0" points="162.60000610351562, 42.99993896484375, 162.60000610351562, -370.79998779296875, 280.0, 42.99993896484375" stroke="TRANSPARENT" strokeType="INSIDE" />
-      <GridPane layoutX="-4.0" layoutY="-1.0" prefHeight="415.8" prefWidth="616.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Polygon fill="#4ec8f50d" layoutX="-208.0" layoutY="368.0" points="208.00001525878906, 539.2000122070312, 208.0, -368.0, 686.5999755859375, 539.2000122070312" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Polygon fill="#4ec8f50d" layoutX="-216.0" layoutY="368.0" points="216.00001525878906, 539.2000122070312, 213.59999084472656, -369.1999816894531, 598.5999755859375, 540.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Polygon fill="#4fc3f70d" layoutX="-164.0" layoutY="368.0" points="161.59999084472656, 540.0, 162.60000610351562, -370.79998779296875, 451.5999755859375, 541.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <GridPane layoutY="14.0" prefHeight="415.8" prefWidth="616.0" AnchorPane.bottomAnchor="-14.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="14.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="129.0" />
@@ -47,26 +44,16 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </TextField>
-            <Button id="connectionBtn" fx:id="connectionBtn" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="37.0" prefWidth="152.0" style="-fx-background-color: #4fc3f7;" text="LOG IN" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+            <Button id="connectionBtn" fx:id="connectionBtn" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="62.0" prefWidth="310.0" style="-fx-background-color: #4fc3f7;" text="LOG IN" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
                <font>
-                  <Font name="System Bold" size="25.0" />
+                  <Font name="Calibri Bold" size="24.0" />
                </font>
             </Button>
-            <Button id="registerBtn" fx:id="registerBtn" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="37.0" prefWidth="152.0" style="-fx-background-color: #4fc3f7;" text="SIGN UP" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+            <Button id="registerBtn" fx:id="registerBtn" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="62.0" prefWidth="311.0" style="-fx-background-color: #4fc3f7;" text="SIGN UP" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                <font>
-                  <Font name="System Bold" size="24.0" />
+                  <Font name="Calibri Bold" size="24.0" />
                </font>
             </Button>
-            <Avatar radius="40.0" GridPane.columnIndex="3" GridPane.halignment="CENTER">
-               <image>
-                  <Image url="@../../Downloads/1200px-Octicons-mark-github.svg.png" />
-               </image>
-            </Avatar>
-            <Text fill="#4ec3f5cc" strokeType="OUTSIDE" strokeWidth="0.0" text="APP" textAlignment="CENTER" wrappingWidth="61.2786865234375" GridPane.columnIndex="4" GridPane.halignment="CENTER">
-               <font>
-                  <Font name="System Bold" size="22.0" />
-               </font>
-            </Text>
             <PasswordField fx:id="logInPassword" alignment="CENTER" promptText="password" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                <GridPane.margin>
                   <Insets />
