--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/MainMenu.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/MainMenu.fxml
@@ -1,59 +1,146 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.effect.Blend?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.shape.Polygon?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" style="-fx-background-color: #2F2F30;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <HBox layoutX="378.0" layoutY="350.0" spacing="40.0">
+      <HBox layoutX="259.0" layoutY="350.0" spacing="40.0">
          <children>
-            <Button mnemonicParsing="false" prefHeight="201.0" prefWidth="223.0" style="-fx-background-color: #B9DCE4;" textFill="#f2f1f0">
+            <Button fx:id="ProfileAccessBtn" layoutX="104.0" layoutY="356.0" mnemonicParsing="false" prefHeight="201.0" prefWidth="223.0" style="-fx-background-color: #4fc3f7;" textFill="#f2f1f0">
                <font>
                   <Font size="36.0" />
                </font>
                <graphic>
-                  <FontAwesomeIconView fx:id="user" glyphName="USER" />
+                  <ImageView fitHeight="102.0" fitWidth="93.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@icons/USER_ICON.png" />
+                     </image>
+                     <effect>
+                        <Blend />
+                     </effect>
+                  </ImageView>
                </graphic>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="201.0" prefWidth="223.0" style="-fx-background-color: #F1E0A6;" textFill="#f2f1f0">
+            <Button fx:id="ProjectAccessBtn" mnemonicParsing="false" prefHeight="201.0" prefWidth="223.0" style="-fx-background-color: #4fc3f7;" textFill="#f2f1f0">
                <font>
                   <Font size="36.0" />
                </font>
                <graphic>
-                  <FontAwesomeIconView glyphName="FOLDER" />
+                  <ImageView blendMode="HARD_LIGHT" fitHeight="90.0" fitWidth="219.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@icons/PROJECT_ICON.png" />
+                     </image>
+                  </ImageView>
                </graphic>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="201.0" prefWidth="223.0" style="-fx-background-color: #FFD7FF;" textFill="#f2f1f0">
+            <Button fx:id="CalendarAccessBtn" mnemonicParsing="false" prefHeight="201.0" prefWidth="223.0" style="-fx-background-color: #4fc3f7;" textFill="#f2f1f0">
                <font>
                   <Font size="36.0" />
                </font>
                <graphic>
-                  <FontAwesomeIconView glyphName="CALENDAR" />
+                  <ImageView fitHeight="83.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@icons/CALENDAR_INCON.png" />
+                     </image>
+                  </ImageView>
                </graphic>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="201.0" prefWidth="223.0" style="-fx-background-color: #D0F8D0;" textFill="#f2f1f0">
+            <Button fx:id="SettingsAccessBtn" mnemonicParsing="false" prefHeight="201.0" prefWidth="223.0" style="-fx-background-color: #4fc3f7;" textFill="#f2f1f0">
                <font>
                   <Font size="36.0" />
                </font>
                <graphic>
-                  <FontAwesomeIconView glyphName="COG" />
+                  <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@icons/PARAMETER_SYMBOL.png" />
+                     </image>
+                  </ImageView>
                </graphic>
             </Button>
          </children>
       </HBox>
-      <Polygon fill="#b1a493" layoutX="151.0" layoutY="150.0" points="-151.0, 300.0, 387.0, -150.0, -151.0, -150.0" stroke="#b1a493" strokeType="INSIDE" strokeWidth="0.0" />
-      <Polygon fill="#3f3f59" layoutX="99.0" layoutY="737.0" points="-99.0, 163.0, 439.0, 163.0, -99.0, -287.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
-      <HBox layoutX="1156.0" layoutY="760.0" prefHeight="70.0" prefWidth="206.0" spacing="15.0">
-         <children>
-            <Circle fill="#b1a493" radius="34.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
-            <Circle fill="#b1a493" radius="34.0" stroke="BLACK" strokeType="INSIDE" />
-            <Circle fill="#b1a493" radius="34.0" stroke="BLACK" strokeType="INSIDE" />
-         </children>
-      </HBox>
+      <Polygon layoutX="151.0" layoutY="150.0" points="-151.0, 300.0, 387.0, -150.0, -151.0, -150.0" stroke="#caf1ff" strokeType="INSIDE" strokeWidth="0.0">
+         <fill>
+            <LinearGradient endY="1.0" startX="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="0.5803921818733215" green="0.8745098114013672" blue="1.0" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </fill></Polygon>
+      <Polygon layoutX="99.0" layoutY="737.0" points="-99.0, 163.0, 439.0, 163.0, -99.0, -287.0" stroke="#ecf8fc" strokeType="INSIDE" strokeWidth="0.0">
+         <fill>
+            <LinearGradient endY="1.0" startX="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="0.7921568751335144" green="0.9450980424880981" blue="1.0" />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.007662835249042145">
+                     <color>
+                        <Color red="0.7921568751335144" green="0.9450980424880981" blue="1.0" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </fill></Polygon>
+      <Polygon layoutX="86.0" layoutY="80.0" points="-86.0, 215.0, 452.0, -80.0, -86.0, -80.0" stroke="#d4f3ff" strokeType="INSIDE" strokeWidth="0.0">
+         <fill>
+            <LinearGradient endX="1.0" endY="1.0" startX="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="0.5803921818733215" green="0.8745098114013672" blue="1.0" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.8313725590705872" green="0.9529411792755127" blue="1.0" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </fill>
+      </Polygon>
+      <Polygon fill="#c1e7f5" layoutX="121.0" layoutY="90.0" points="-121.0, 91.0, 417.0, -90.0, -121.0, -90.0" stroke="#c1e7f5" strokeType="INSIDE" strokeWidth="0.0" />
+      <Polygon fill="#d4f3ff" layoutX="50.0" layoutY="855.0" points="-50.0, 45.0, 481.0, 45.0, -50.0, -293.0" stroke="#d4f3ff" strokeType="INSIDE" />
+      <Polygon fill="#c1e7f5" layoutX="72.0" layoutY="828.0" points="-72.0, 72.0, 459.0, 72.0, -72.0, -119.0" stroke="#c1e7f5" strokeType="INSIDE" />
+      <Button fx:id="HelpBtn" layoutX="1407.0" layoutY="821.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="50.0" style="-fx-background-color: #4fc3f7;" text="?" />
+      <Button fx:id="LogOutBtn" layoutX="1296.0" layoutY="821.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="92.0" style="-fx-background-color: #4fc3f7;" text="LOG OUT">
+         <font>
+            <Font name="Calibri" size="13.0" />
+         </font></Button>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e1e1e1" height="77.0" stroke="#e1e1e1" strokeType="INSIDE" width="1500.0" />
+      <Text fill="WHITE" layoutX="13.0" layoutY="55.0" lineSpacing="1.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MAIN MENU" wrappingWidth="504.9830722808838">
+         <font>
+            <Font name="Calibri" size="48.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
