--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/SignUpV2.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/SignUpV2.fxml
@@ -13,12 +13,12 @@
 
 <AnchorPane prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.JavaUI.sample.Controller">
    <children>
-      <Button id="registerBtn" fx:id="SignUpBtn" layoutX="611.0" layoutY="701.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="53.0" prefWidth="278.0" style="-fx-background-color: #4fc3f7;" text="SIGN UP" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="SignUpBtn" layoutX="611.0" layoutY="701.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="53.0" prefWidth="278.0" style="-fx-background-color: #4fc3f7;" text="SIGN UP" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Calibri Bold" size="24.0" />
          </font>
       </Button>
-      <Button id="registerBtn" fx:id="goToConnection" layoutX="611.0" layoutY="778.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="53.0" prefWidth="278.0" style="-fx-background-color: #4fc3f7;" text="BACK" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="goToConnection" layoutX="611.0" layoutY="778.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="53.0" prefWidth="278.0" style="-fx-background-color: #4fc3f7;" text="BACK" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
@@ -48,28 +48,28 @@
             <RowConstraints minHeight="43.59999694824222" prefHeight="55.40003662109376" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <TextField id="username" fx:id="signUpUsername" accessibleRole="TEXT" alignment="CENTER" promptText="username" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+            <TextField  fx:id="signUpUsernameField" accessibleRole="TEXT" alignment="CENTER" promptText="username" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </TextField>
-            <TextField id="password" fx:id="email" accessibleRole="PASSWORD_FIELD" alignment="CENTER" promptText="email" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-            <TextField id="username" fx:id="firstName" accessibleRole="TEXT" alignment="CENTER" layoutX="240.0" layoutY="133.0" promptText="first name" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <TextField  fx:id="emailField" accessibleRole="PASSWORD_FIELD" alignment="CENTER" promptText="email" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+            <TextField  fx:id="firstNameField" accessibleRole="TEXT" alignment="CENTER" layoutX="240.0" layoutY="133.0" promptText="first name" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </TextField>
-            <TextField id="username" fx:id="lastName" accessibleRole="TEXT" alignment="CENTER" layoutX="240.0" layoutY="133.0" promptText="last name" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <TextField fx:id="lastNameField" accessibleRole="TEXT" alignment="CENTER" layoutX="240.0" layoutY="133.0" promptText="last name" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </TextField>
-            <TextField id="username" fx:id="signUpPassword" accessibleRole="TEXT" alignment="CENTER" layoutX="240.0" layoutY="133.0" promptText="password" GridPane.columnIndex="3" GridPane.rowIndex="1">
+            <TextField fx:id="signUpPasswordField" accessibleRole="TEXT" alignment="CENTER" layoutX="240.0" layoutY="133.0" promptText="password" GridPane.columnIndex="3" GridPane.rowIndex="1">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </TextField>
-            <TextField id="username" fx:id="passwordConfirmation" accessibleRole="TEXT" alignment="CENTER" layoutX="240.0" layoutY="133.0" promptText="confirm password" GridPane.columnIndex="3" GridPane.rowIndex="2">
+            <TextField fx:id="passwordConfirmationField" accessibleRole="TEXT" alignment="CENTER" layoutX="240.0" layoutY="133.0" promptText="confirm password" GridPane.columnIndex="3" GridPane.rowIndex="2">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
