--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/Stats.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/Stats.fxml
@@ -193,7 +193,7 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button id="connectionBtn" fx:id="goToConnection" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="40.0" prefWidth="97.0" style="-fx-background-color: CC8B8B;" text="Log out" textAlignment="CENTER" textFill="WHITE" underline="true">
+            <Button id="connectionBtn" fx:id="LogOutBtn" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="40.0" prefWidth="97.0" style="-fx-background-color: CC8B8B;" text="Log out" textAlignment="CENTER" textFill="WHITE" underline="true">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
