--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/Visual.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/Visual.fxml
@@ -99,7 +99,7 @@
                   <Font size="23.0" />
                </font>
             </Label>
-            <Button fx:id="goToStats1" layoutX="-1.0" layoutY="3.0" minWidth="53.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="62.0" prefWidth="93.0" style="-fx-background-color: #00000056;" text="Back" textFill="WHITE">
+            <Button fx:id="goToStats" layoutX="-1.0" layoutY="3.0" minWidth="53.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="62.0" prefWidth="93.0" style="-fx-background-color: #00000056;" text="Back" textFill="WHITE">
                <font>
                   <Font size="14.0" />
                </font>
@@ -123,7 +123,7 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button id="connectionBtn" fx:id="goToConnection" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="40.0" prefWidth="97.0" style="-fx-background-color: CC8B8B;" text="Log out" textAlignment="CENTER" textFill="WHITE" underline="true">
+            <Button id="connectionBtn" fx:id="LogOutBtn" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="40.0" prefWidth="97.0" style="-fx-background-color: CC8B8B;" text="Log out" textAlignment="CENTER" textFill="WHITE" underline="true">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
