--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/Projects.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/Projects.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -13,12 +15,23 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.JavaUI.sample.Controller">
    <children>
-      <TableView fx:id="projectsTable" layoutX="499.0" layoutY="196.0" prefHeight="511.0" prefWidth="583.0">
+      <TableView fx:id="projectsTable" layoutX="499.0" layoutY="196.0" prefHeight="511.0" prefWidth="357.0">
         <columns>
-          <TableColumn fx:id="projectsColumn" prefWidth="159.0" text="Projects" />
-            <TableColumn fx:id="descriptionColumn" prefWidth="210.0" text="Description" />
-            <TableColumn fx:id="tagsColumn" prefWidth="213.0" text="Tags" />
+          <TableColumn fx:id="projectsColumn" prefWidth="93.0" text="Projects" />
+            <TableColumn fx:id="descriptionColumn" prefWidth="89.0" text="Description" />
+            <TableColumn fx:id="tagsColumn" prefWidth="93.0" text="Tags" />
+            <TableColumn fx:id="dateColumn" prefWidth="81.0" text="Date" />
         </columns>
+         <contextMenu>
+            <ContextMenu>
+              <items>
+                  <MenuItem mnemonicParsing="false" onAction="#showDetailsProject" text="Show details" />
+                  <MenuItem mnemonicParsing="false" onAction="#showSubProjects" text="Show sub projects" />
+                  <MenuItem mnemonicParsing="false" text="Add task" />
+                <MenuItem mnemonicParsing="false" onAction="#deleteProject" text="Delete" />
+              </items>
+            </ContextMenu>
+         </contextMenu>
       </TableView>
       <Pane layoutX="-1.0" layoutY="-7.0" prefHeight="908.0" prefWidth="461.0" style="-fx-background-color: #3B6CD1;">
          <children>
@@ -28,6 +41,7 @@
                   <TextField fx:id="descriptionProject" prefHeight="35.0" promptText="Description" />
                   <DatePicker fx:id="dateProject" prefHeight="35.0" prefWidth="295.0" promptText="Date" />
                   <TextField fx:id="tagsProject" prefHeight="35.0" prefWidth="283.0" promptText="Tags" />
+                  <TextField fx:id="parentProject" prefHeight="35.0" prefWidth="283.0" promptText="Parent( optionnal )" />
                </children>
             </VBox>
             <Button fx:id="addBtn" layoutX="132.0" layoutY="626.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="54.0" prefWidth="198.0" style="-fx-background-color: #B9DCE4;" text="Add" />
@@ -36,13 +50,20 @@
                   <Font size="48.0" />
                </font>
             </Label>
-            <Button fx:id="deleteBtn" layoutX="132.0" layoutY="710.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="54.0" prefWidth="198.0" style="-fx-background-color: #B9DCE4;" text="Delete" />
          </children>
       </Pane>
-      <Button fx:id="loadBtn" layoutX="702.0" layoutY="776.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="70.0" prefWidth="178.0" style="-fx-background-color: #3B6CD1;" text="Load" textFill="#fcf6f6">
+      <Button fx:id="loadBtn" layoutX="813.0" layoutY="777.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="70.0" prefWidth="178.0" style="-fx-background-color: #3B6CD1;" text="Load" textFill="#fcf6f6">
          <font>
             <Font size="24.0" />
          </font>
       </Button>
+      <TableView fx:id="subProjectsTable" layoutX="984.0" layoutY="196.0" prefHeight="511.0" prefWidth="357.0">
+         <columns>
+            <TableColumn fx:id="subprojectsColumn" prefWidth="93.0" text="Projects" />
+            <TableColumn fx:id="subdescriptionColumn" prefWidth="89.0" text="Description" />
+            <TableColumn fx:id="subtagsColumn" prefWidth="93.0" text="Tags" />
+            <TableColumn fx:id="subdateColumn" prefWidth="81.0" text="Date" />
+         </columns>
+      </TableView>
    </children>
 </AnchorPane>
