--- a/src/be/ac/ulb/infof307/g06/views/ProjectsView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/ProjectsView.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -38,7 +37,7 @@
                   <TextField fx:id="parentProject" prefHeight="35.0" prefWidth="283.0" promptText="Parent( optionnal )" />
                </children>
             </VBox>
-            <Button fx:id="addProjectBtn" layoutX="163.0" layoutY="388.0" mnemonicParsing="false" onAction="#events" prefHeight="34.0" prefWidth="144.0" style="-fx-background-color: #bcbcbc;" text="ADD" textFill="WHITE">
+            <Button fx:id="addProjectBtn" layoutX="163.0" layoutY="388.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="144.0" style="-fx-background-color: #bcbcbc;" text="ADD" textFill="WHITE">
                <font>
                   <Font name="Calibri" size="12.0" />
                </font>
@@ -57,8 +56,8 @@
          <contextMenu>
             <ContextMenu>
               <items>
-                  <MenuItem mnemonicParsing="false" onAction="#showDetailsProject" text="Show details" />
-                <MenuItem mnemonicParsing="false" onAction="#deleteProject" text="delete" />
+                  <MenuItem mnemonicParsing="false" text="Show details" />
+                <MenuItem mnemonicParsing="false" text="delete" />
               </items>
             </ContextMenu>
          </contextMenu>
@@ -79,7 +78,7 @@
       <TextArea fx:id="descriptionTask" layoutX="980.0" layoutY="727.0" prefHeight="62.0" prefWidth="219.0" promptText="Description" />
       <TextField fx:id="taskParent" layoutX="1212.0" layoutY="743.0" prefHeight="25.0" prefWidth="127.0" promptText="Project's name" />
       <Button fx:id="addTaskBtn" layoutX="1348.0" layoutY="743.0" mnemonicParsing="false" onAction="#addTask" style="-fx-background-color: #4fc3f7;" text="add" textFill="WHITE" />
-      <Button fx:id="backBtn" layoutX="1385.0" layoutY="822.0" mnemonicParsing="false" onAction="#events" prefHeight="43.0" prefWidth="78.0" style="-fx-background-color: #4fc3f7;" text="Back" textFill="WHITE" />
+      <Button fx:id="backBtn" layoutX="1385.0" layoutY="822.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="78.0" style="-fx-background-color: #4fc3f7;" text="Back" textFill="WHITE" />
       <Label layoutX="477.0" layoutY="14.0" text="Manage Project" textFill="#556668" underline="true">
          <font>
             <Font size="48.0" />
@@ -89,7 +88,6 @@
          <children>
             <VBox layoutX="122.0" layoutY="95.0" prefHeight="293.0" prefWidth="226.0" spacing="40.0">
                <children>
-                  <ComboBox fx:id="projectSelection" onAction="#Select" prefHeight="25.0" prefWidth="235.0" promptText="Select Project" style="-fx-background-color: #bcbcbc;" />
                   <TextField fx:id="newNameProject" prefHeight="35.0" promptText="Project's new name" />
                   <TextField fx:id="newdescription" prefHeight="35.0" promptText="New description" />
                   <DatePicker fx:id="newDateProject" prefHeight="35.0" prefWidth="295.0" promptText="New date" />
@@ -101,7 +99,7 @@
                   <Font name="Calibri" size="24.0" />
                </font>
             </Text>
-            <Button fx:id="EditProjectBtn" layoutX="168.0" layoutY="416.0" mnemonicParsing="false" onAction="#events" prefHeight="34.0" prefWidth="134.0" style="-fx-background-color: #bcbcbc;" text="EDIT" textFill="WHITE">
+            <Button fx:id="EditProjectBtn" layoutX="168.0" layoutY="416.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="134.0" style="-fx-background-color: #bcbcbc;" text="EDIT" textFill="WHITE">
                <font>
                   <Font name="Calibri" size="12.0" />
                </font>
