--- a/src/be/ac/ulb/infof307/g06/views/ProjectViews/ProjectsViewV2.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/ProjectViews/ProjectsViewV2.fxml
@@ -15,6 +15,7 @@
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import org.controlsfx.control.CheckComboBox?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.ProjectViews.ProjectsViewController">
    <children>
@@ -63,6 +64,10 @@
                   <ContextMenu>
                      <items>
                         <MenuItem mnemonicParsing="false" onAction="#deleteTask" text="Delete" />
+                        <MenuItem mnemonicParsing="false" onAction="#assignCollaborators" text="Assign collaborator">
+                           <graphic>
+                              <CheckComboBox fx:id="collabComboBox" />
+                           </graphic></MenuItem>
                      </items>
                   </ContextMenu>
                </contextMenu>
@@ -85,7 +90,7 @@
             <TextArea fx:id="descriptionTask" layoutX="21.0" layoutY="674.0" prefHeight="38.0" prefWidth="519.0" />
             <TextArea fx:id="collaboratorsName" layoutX="709.0" layoutY="675.0" prefHeight="38.0" prefWidth="224.0" />
             <Button fx:id="addCollaboratorsBtn" layoutX="951.0" layoutY="675.0" mnemonicParsing="false" onAction="#addCollaborator" prefHeight="37.0" prefWidth="69.0" text="ADD" />
-            <Button fx:id="exportProjectBtn" layoutX="205.0" layoutY="71.0" mnemonicParsing="false" text="Export" onAction="#events" />
+            <Button fx:id="exportProjectBtn" layoutX="205.0" layoutY="71.0" mnemonicParsing="false" onAction="#events" text="Export" />
          </children>
       </Pane>
       <Button fx:id="addBtn" layoutX="354.0" layoutY="817.0" mnemonicParsing="false" onAction="#events" prefHeight="54.0" prefWidth="111.0" style="-fx-background-color: #4fc3f7;" text="ADD" />
