--- a/src/be/ac/ulb/infof307/g06/views/Tags.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/Tags.fxml
@@ -2,10 +2,9 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.effect.Bloom?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
@@ -13,45 +12,9 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.MenuViewController">
    <children>
-      <HBox layoutX="259.0" layoutY="350.0" spacing="40.0">
-         <children>
-            <Button fx:id="tagsBtn" layoutX="104.0" layoutY="356.0" mnemonicParsing="false" onAction="#menuEvents" prefHeight="201.0" prefWidth="223.0" style="-fx-background-color: #4fc3f7;" textFill="#f2f1f0">
-               <font>
-                  <Font size="36.0" />
-               </font>
-               <graphic>
-                  <ImageView fitHeight="115.0" fitWidth="99.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../icons/TAGS_ICON.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Button fx:id="languageBtn" mnemonicParsing="false" onAction="#menuEvents" prefHeight="201.0" prefWidth="223.0" style="-fx-background-color: #4fc3f7;" textFill="#f2f1f0">
-               <font>
-                  <Font size="36.0" />
-               </font>
-               <graphic>
-                  <ImageView fitHeight="120.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../icons/LANGUAGE_ICON.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Button mnemonicParsing="false" onAction="#menuEvents" prefHeight="201.0" prefWidth="223.0" style="-fx-background-color: #4fc3f7;" text="?" textFill="#f2f1f0">
-               <font>
-                  <Font size="36.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" onAction="#menuEvents" prefHeight="201.0" prefWidth="223.0" style="-fx-background-color: #4fc3f7;" text="?" textFill="#f2f1f0">
-               <font>
-                  <Font size="36.0" />
-               </font>
-            </Button>
-         </children>
-      </HBox>
-      <Button fx:id="backBtn" layoutX="1252.0" layoutY="816.0" mnemonicParsing="false" onAction="#menuEvents" prefHeight="54.0" prefWidth="201.0" style="-fx-background-color: #4fc3f7;" text="BACK" textFill="WHITE">
+      <Pane layoutX="812.0" layoutY="77.0" prefHeight="823.0" prefWidth="688.0" style="-fx-background-color: #4fc3f7;" />
+      <HBox layoutX="259.0" layoutY="350.0" spacing="40.0" />
+      <Button fx:id="backBtn" layoutX="1252.0" layoutY="816.0" mnemonicParsing="false" onAction="#settingsEvents" prefHeight="54.0" prefWidth="201.0" style="-fx-background-color: #e1e1e1;" text="BACK" textFill="#7c7676">
          <font>
             <Font name="Calibri" size="24.0" />
          </font></Button>
@@ -72,7 +35,7 @@
       <Polygon fill="#4ec8f50d" layoutX="-203.0" layoutY="-29.0" points="205.59999084472656, 517.0, 205.59999084472656, 33.0, 456.5999755859375, 33.0" stroke="TRANSPARENT" strokeType="INSIDE" />
       <Polygon fill="#4fc3f70d" layoutX="-160.0" layoutY="-36.0" points="161.59999084472656, 522.0, 161.59999084472656, 26.0, 357.5999755859375, 26.0" stroke="TRANSPARENT" strokeType="INSIDE" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e1e1e1" height="77.0" stroke="#e1e1e1" strokeType="INSIDE" width="1500.0" />
-      <Text fill="WHITE" layoutX="13.0" layoutY="55.0" lineSpacing="1.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SETTINGS" wrappingWidth="504.9830722808838">
+      <Text fill="WHITE" layoutX="13.0" layoutY="55.0" lineSpacing="1.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TAGS" wrappingWidth="504.9830722808838">
          <font>
             <Font name="Calibri" size="48.0" />
          </font>
